--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+-i https://pypi.org/simple
 altgraph==0.17.2
-click==8.0.4
-macholib==1.15.2
+click==8.1.3
+cycler==0.11.0
+fonttools==4.33.3
+kiwisolver==1.4.2
+matplotlib==3.5.2
 numpy==1.22.3
-pandas==1.4.1
+packaging==21.3
+pandas==1.4.2
+pillow==9.1.0
 pycrossva==0.7
-pyinstaller==4.10
-pyinstaller-hooks-contrib==2022.2
-PyQt5==5.15.6
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.1
+pyinstaller==5.0.1
+pyinstaller-hooks-contrib==2022.4
+pyparsing==3.0.9
+pyqt5==5.15.6
+pyqt5-qt5==5.15.2
+pyqt5-sip==12.10.1
 python-dateutil==2.8.2
-pytz==2021.3
+pytz==2022.1
 six==1.16.0
