--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,32 @@
 -i https://pypi.org/simple
-altgraph==0.17.2
-click==8.1.3
-cycler==0.11.0
-fonttools==4.33.3
-kiwisolver==1.4.2
-matplotlib==3.5.2
-numpy==1.22.3
-packaging==21.3
-pandas==1.4.2
-pillow==9.1.0
-pycrossva==0.7
-pyinstaller==5.0.1
-pyinstaller-hooks-contrib==2022.4
-pyparsing==3.0.9
-pyqt5==5.15.6
+altgraph==0.17.3
+click==8.1.3 ; python_version >= '3.7'
+contourpy==1.0.7 ; python_version >= '3.8'
+cycler==0.11.0 ; python_version >= '3.6'
+fonttools==4.38.0 ; python_version >= '3.7'
+git+https://github.com/verbal-autopsy-software/pyinsilicova@5822d4b72fefe89987f3ef0eb4eb364016d513dd#egg=insilicova
+interva==0.0.3
+kiwisolver==1.4.4 ; python_version >= '3.7'
+macholib==1.16.2 ; sys_platform == 'darwin'
+matplotlib==3.6.3
+numpy==1.24.2 ; python_version >= '3.8'
+packaging==23.0 ; python_version >= '3.7'
+pandas==1.5.3
+patsy==0.5.3
+pillow==9.4.0 ; python_version >= '3.7'
+pycrossva==0.93
+pyinstaller==5.8.0
+pyinstaller-hooks-contrib==2023.0 ; python_version >= '3.7'
+pyparsing==3.0.9 ; python_full_version >= '3.6.8'
+pyqt5==5.15.9
 pyqt5-qt5==5.15.2
-pyqt5-sip==12.10.1
-python-dateutil==2.8.2
-pytz==2022.1
-six==1.16.0
+pyqt5-sip==12.11.1 ; python_version >= '3.7'
+python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytz==2022.7.1
+scipy==1.10.1 ; python_version < '3.12' and python_version >= '3.8'
+setuptools==67.4.0 ; python_version >= '3.7'
+six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+statsmodels==0.13.5 ; python_version >= '3.7'
+tqdm==4.64.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+vacheck==0.0.2
+xlrd==2.0.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
