--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-pyopenva/idea*
-pyopenva/build
-pyopenva/dist
-pyopenva/pyopenVA.spec
-pyopenva/venv
-pyopenva/src/main/python/__pycache__
+idea
+build
+dist
+venv
+pyopenva/__pycache__
