--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ name = "pypi"
 [packages]
 pyqt5 = "*"
 pandas = "*"
-pyinstaller = "*"
-pycrossva = "*"
-interva = "*"
+pycrossva = "==0.93"
+interva = "==0.0.4"
+vacheck = "==0.0.2"
 insilicova = {git = "https://github.com/verbal-autopsy-software/pyinsilicova"}
 matplotlib = "==3.6.3"
