changed icons to have transparent background; considering pyqtdarktheme

--- a/Pipfile
+++ b/Pipfile
@@ -11,3 +11,4 @@ interva = "==0.0.5"
 vacheck = "==0.0.2"
 insilicova = {git = "https://github.com/verbal-autopsy-software/pyinsilicova"}
 matplotlib = "==3.6.3"
+pyqtdarktheme = "*"
