--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,6 @@ vacheck = "==0.0.2"
 insilicova = {git = "https://github.com/verbal-autopsy-software/pyinsilicova"}
 matplotlib = "==3.6.3"
 sphinx  = "*"
-cx_Freeze = ">=6.15.11"
 pandas = "==2.0.3"
 sphinxemoji = "*"
+cx-freeze = "*"
