--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,54 @@
 -i https://pypi.org/simple
-altgraph==0.17.3
-click==8.1.3 ; python_version >= '3.7'
-contourpy==1.0.7 ; python_version >= '3.8'
-cycler==0.11.0 ; python_version >= '3.6'
-fonttools==4.38.0 ; python_version >= '3.7'
-git+https://github.com/verbal-autopsy-software/pyinsilicova@5822d4b72fefe89987f3ef0eb4eb364016d513dd#egg=insilicova
-interva==0.0.3
-kiwisolver==1.4.4 ; python_version >= '3.7'
-macholib==1.16.2 ; sys_platform == 'darwin'
+alabaster==0.7.16 ; python_version >= '3.9'
+babel==2.14.0 ; python_version >= '3.7'
+certifi==2024.2.2 ; python_version >= '3.6'
+charset-normalizer==3.3.2 ; python_full_version >= '3.7.0'
+click==8.1.7 ; python_version >= '3.7'
+contourpy==1.2.1 ; python_version >= '3.9'
+cx-freeze==6.15.16
+cycler==0.12.1 ; python_version >= '3.8'
+docutils==0.20.1 ; python_version >= '3.7'
+fonttools==4.50.0 ; python_version >= '3.8'
+idna==3.6 ; python_version >= '3.5'
+imagesize==1.4.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+insilicova==0.1.0
+interva==0.0.7
+jinja2==3.1.3 ; python_version >= '3.7'
+kiwisolver==1.4.5 ; python_version >= '3.7'
+markupsafe==2.1.5 ; python_version >= '3.7'
 matplotlib==3.6.3
-numpy==1.24.2 ; python_version >= '3.8'
-packaging==23.0 ; python_version >= '3.7'
-pandas==1.5.3
-patsy==0.5.3
-pillow==9.4.0 ; python_version >= '3.7'
-pycrossva==0.93
-pyinstaller==5.8.0
-pyinstaller-hooks-contrib==2023.0 ; python_version >= '3.7'
-pyparsing==3.0.9 ; python_full_version >= '3.6.8'
-pyqt5==5.15.9
+numpy==1.26.4 ; python_version >= '3.9'
+packaging==24.0 ; python_version >= '3.7'
+pandas==2.0.3
+patchelf==0.17.2.1 ; sys_platform == 'linux' and platform_machine == 'x86_64'
+patsy==0.5.6
+pillow==10.3.0 ; python_version >= '3.8'
+pycrossva==0.97
+pygments==2.17.2 ; python_version >= '3.7'
+pyparsing==3.1.2 ; python_full_version >= '3.6.8'
+pyqt5==5.15.10
 pyqt5-qt5==5.15.2
-pyqt5-sip==12.11.1 ; python_version >= '3.7'
-python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytz==2022.7.1
-scipy==1.10.1 ; python_version < '3.12' and python_version >= '3.8'
-setuptools==67.4.0 ; python_version >= '3.7'
+pyqt5-sip==12.13.0 ; python_version >= '3.7'
+pyqtwebengine==5.15.6
+pyqtwebengine-qt5==5.15.2
+python-dateutil==2.9.0.post0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytz==2024.1
+requests==2.31.0 ; python_version >= '3.7'
+scipy==1.13.0 ; python_version >= '3.9'
+setuptools==69.2.0 ; python_version >= '3.8'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-statsmodels==0.13.5 ; python_version >= '3.7'
-tqdm==4.64.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-vacheck==0.0.2
+snowballstemmer==2.2.0
+sphinx==7.2.6
+sphinxcontrib-applehelp==1.0.8 ; python_version >= '3.9'
+sphinxcontrib-devhelp==1.0.6 ; python_version >= '3.9'
+sphinxcontrib-htmlhelp==2.0.5 ; python_version >= '3.9'
+sphinxcontrib-jsmath==1.0.1 ; python_version >= '3.5'
+sphinxcontrib-qthelp==1.0.7 ; python_version >= '3.9'
+sphinxcontrib-serializinghtml==1.1.10 ; python_version >= '3.9'
+sphinxemoji==0.3.1
+statsmodels==0.14.1 ; python_version >= '3.8'
+tzdata==2024.1 ; python_version >= '2'
+urllib3==2.2.1 ; python_version >= '3.8'
+vacheck==0.0.3
+wheel==0.43.0 ; python_version >= '3.8'
 xlrd==2.0.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
