--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - name: Check out repository
       uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
