--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -58,7 +58,7 @@ jobs:
         python-version: ["3.11"]
     steps:
       - run: |
-          gh release create v1.1 pyopenva-1.1-win64.msi
+          gh release create v1.1 pyopenva-1.1-win64.msi.zip
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
         shell: bash
