updating insilciova dependency (to include mac wheel)

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ pyqtwebengine = "*"
 pycrossva = ">=0.97"
 interva = ">=0.0.7"
 vacheck = ">=0.0.3"
-insilicova = "*"
+insilicova = ">=0.1.1"
 matplotlib = "==3.6.3"
 sphinx  = "*"
 pandas = "==2.0.3"
