--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -62,9 +62,10 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          pattern: pyopenva*
           path: dist
           merge-multiple: true
+      - name: Display structure of downloaded files
+        run: ls -R ./dist
       - name: Create release in GitHub and uploads attachments
         run: gh release create v1.1 ./dist/pyopenva-1.1-win64.msi ./dist/pyopenVA.dmg
         env:
