--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -55,11 +55,10 @@ jobs:
           path: ./build/*.dmg
   create_release:
     needs: [build]
-    environment: pypi
-    permissions:
-      id-token: write
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           path: dist
@@ -67,7 +66,6 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R ./dist
       - name: Create release in GitHub and uploads attachments
-        run: gh release create v1.1 ./dist/pyopenva-1.1-win64.msi ./dist/pyopenVA.dmg
         env:
-            GITHUB_TOKEN: ${{ github.TOKEN }}
-        shell: bash
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release create v1.1 ./dist/pyopenva-1.1-win64.msi ./dist/pyopenVA.dmg
