--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "~3.11"
-pyqt5-qt5 = "==5.15.2"
+
+pyqt5-qt5 = [
+    {version = "==5.15.2", platform = "win32"},
+    {version = "==5.15.13", platform = "darwin"}
+    ]
 pyqtwebengine-qt5 = "==5.15.2"
 pyqt5 = "*"
 pyqtwebengine = "*"
