--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -25,34 +25,22 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    # - name: Set up poetry
-    #   run: |
-    #     pipx install poetry
-    # - name: Install boost for Mac
-    #   if: runner.os == 'macOS'
-    #   run: |
-    #       brew update
-    #       brew install boost
-    #       echo "LDFLAGS=-L/opt/homebrew/Cellar/lib" >> "$GITHUB_ENV"
-    #       echo "CPPFLAGS=-I/opt/homebrew/include" >> "$GITHUB_ENV"
     - name: Install dependencies
-      if: runner.os == 'macOS'
+      if: runner.os == 'Windows'
       run: |
-        # poetry install
-        python -m pip install -r requirements-mac.txt
+        python -m pip install -r requirements.txt
     - name: Install dependencies of macOS
       if: runner.os == 'macOS'
       run: |
           brew update
           brew install libiodbc libpq
+          python -m pip install -r requirements-mac.txt
     - name: Build Windows installer
       if: runner.os == 'Windows'
-      # run: poetry run python setup.py bdist_msi
-      run: python -m pip install -r requirements.txt
+      run: python setup.py bdist_msi
     - name: Build installer for macos-latest
       if: matrix.os == 'macos-latest'
       run: |
-          # poetry run python setup.py bdist_dmg
           python setup.py bdist_dmg
           pwd
           ls ./build
@@ -60,7 +48,6 @@ jobs:
     - name: Build installer for macos-13
       if: matrix.os == 'macos-13'
       run: |
-          # poetry run python setup.py bdist_dmg
           python setup.py bdist_dmg
           pwd
           ls ./build/
